apps/sso-dev/kong-gateway/kong-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-gateway
  labels:
    app: kong-gateway
  namespace: sso-dev
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kong-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: kong-gateway
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - image: 405906814034.dkr.ecr.ap-northeast-2.amazonaws.com/sso-dev/kong-gateway:30
        name: kong-gateway
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 8000
          name: proxy
          protocol: TCP
        - containerPort: 8100
          name: metrics
          protocol: TCP
        volumeMounts:
        - name: kong-config
          mountPath: /etc/kong
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
      volumes:
      - name: kong-config
        configMap:
          name: kong-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: sso-dev
  name: kong-gateway
spec:
  type: ClusterIP
  selector:
    app: kong-gateway
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: sso-dev
  name: kong-gateway
spec:
  gateways:
  - istio-ingress/waffle-ingressgateway
  - mesh
  hosts:
  - api-gateway-dev.wafflestudio.com
  - sso-dev.wafflestudio.com
#  - wacruit-dev.wafflestudio.com
  http:
  - route:
    - destination:
        host: kong-gateway
